--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -27,17 +27,21 @@
                     <view>赛事</view>
                 </view>
             </navigator>
+            <navigator url="/pages/membersinfo/membersinfo" class="weui-cell" hover-class="weui-cell_active">
+                <view class="weui-cell__bd">
+                    <view>完善个人资料</view>
+                </view>
+            </navigator>
         </view>
         <view class="page-section page-section-gap">
-          <map
-            id="myMap"
-            style="width: 100%; height: 100vh;"
-            latitude="{{latitude}}"
-            longitude="{{longitude}}"
-            markers="{{markers}}"
-            covers="{{covers}}"
-            show-location
-          ></map>
+          <view class="map_container">
+            <map class="map" id="map" longitude="{{longitude}}" latitude="{{latitude}}" scale="14" show-location="true" markers="{{markers}}" bindmarkertap="makertap"></map>
+          </view>
+          <view class="place_info">
+            <text>{{placeData.title}}</text>
+            <text>{{placeData.address}}</text>
+            <text>{{placeData.telephone}}</text>
+          </view>
         </view>
     </view>
 </view>
