--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -8,3 +8,17 @@
 .weui-cell{
     padding: 12px 15px 12px 35px;
 }
+
+.map_container{
+    height: 420px;
+    width: 100%;
+}
+
+.map {
+    height: 100%;
+    width: 100%;
+}
+
+.place_info {
+    padding: 0 5px;
+}
