--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -35,7 +35,17 @@
         </view>
         <view class="page-section page-section-gap">
           <view class="map_container">
-            <map class="map" id="map" longitude="{{longitude}}" latitude="{{latitude}}" scale="14" show-location="true" markers="{{markers}}" bindmarkertap="makertap"></map>
+            <map
+              id="myMap"
+              style="width: 100%; height: 100vh;"
+              latitude="{{latitude}}"
+              longitude="{{longitude}}"
+              markers="{{markers}}"
+              covers="{{covers}}"
+              controls="{{controls}}"
+              bindmarkertap="bindmarkertap"  bindcontroltap="bindcontroltap"
+              show-location
+            ></map>
           </view>
           <view class="place_info">
             <text>{{placeData.title}}</text>
