--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -16,56 +16,33 @@
             </view>
             <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="hideInput">取消</view>
         </view>
-        <view class="weui-cells searchbar-result" wx:if="{{inputVal.length > 0}}">
-            <navigator url="/pages/search/index" class="weui-cell" hover-class="weui-cell_active">
-                <view class="weui-cell__bd">
-                    <view>球队</view>
-                </view>
-            </navigator>
-            <navigator url="/pages/search/index" class="weui-cell" hover-class="weui-cell_active">
-                <view class="weui-cell__bd">
-                    <view>赛事</view>
-                </view>
-            </navigator>
-            <navigator url="/pages/membersinfo/membersinfo" class="weui-cell" hover-class="weui-cell_active">
-                <view class="weui-cell__bd">
-                    <view>完善个人资料</view>
-                </view>
-            </navigator>
-        </view>
+        <block wx:for="{{searchResults}}" wx:key="title" wx:for-item="item">
+          <view class="search-result" data-location="{{item.location}}" bindtap="pinMapBySuggest">
+            <view class="search-info" >
+              <view class="search-result-title" data-text="{{item.title}}">{{item.title}}</view>
+              <view class="search-result-address">{{item.address}}</view>
+            </view>
+          </view>
+        </block>
         <view class="page-section page-section-gap">
           <view class="map_container">
             <map
               id="myMap"
-<<<<<<< HEAD
-              style="width: 100%; height: 100%;"
-=======
               style="width: 100%; height: 100vh;"
->>>>>>> f5d786687bac8e54fb8469a4694da2950da60957
               latitude="{{latitude}}"
               longitude="{{longitude}}"
               markers="{{markers}}"
               covers="{{covers}}"
-<<<<<<< HEAD
               show-location
-          ></map>
-=======
               controls="{{controls}}"
               bindmarkertap="bindmarkertap"  bindcontroltap="bindcontroltap"
-              show-location
             ></map>
->>>>>>> f5d786687bac8e54fb8469a4694da2950da60957
           </view>
           <view class="place_info">
             <text>{{placeData.title}}</text>
             <text>{{placeData.address}}</text>
             <text>{{placeData.telephone}}</text>
           </view>
-<<<<<<< HEAD
-
-
-=======
->>>>>>> f5d786687bac8e54fb8469a4694da2950da60957
         </view>
     </view>
 </view>
