--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -17,9 +17,9 @@
             <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="hideInput">取消</view>
         </view>
         <block wx:for="{{searchResults}}" wx:key="title" wx:for-item="item">
-          <view class="search-result" data-location="{{item.location}}" bindtap="pinMapBySuggest">
+          <view class="search-result" data-title="{{item.title}}" data-address="{{item.address}}" data-location="{{item.location}}" bindtap="pinMapBySuggest">
             <view class="search-info" >
-              <view class="search-result-title" data-text="{{item.title}}">{{item.title}}</view>
+              <view class="search-result-title" >{{item.title}}</view>
               <view class="search-result-address">{{item.address}}</view>
             </view>
           </view>
@@ -28,7 +28,7 @@
           <view class="map_container">
             <map
               id="myMap"
-              style="width: 100%; height: 100vh;"
+              class="map"
               latitude="{{latitude}}"
               longitude="{{longitude}}"
               markers="{{markers}}"
