--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -34,7 +34,9 @@
     width: 100%;
 }
 .map {
-    height: 100%;
+    /* height: 100%;  */
+    /* height: calc(100vh - 180rpx); */
+    height:100vh; 
     width: 100%;
 }
 
