--- a/app.wxss
+++ b/app.wxss
@@ -1,3 +1,5 @@
+/**app.wxss**/
+@import "/assets/iconfont/iconfont";
 @import 'weui/style/weui.wxss';
 text {
     line-height: 25px;
@@ -39,3 +41,12 @@ page{
 text {
     line-height: 25px;
 }
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding:  0;
+  box-sizing: border-box;
+} 
