--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -35,6 +35,7 @@
               covers="{{covers}}"
               show-location
               controls="{{controls}}"
+              bindcallouttap="bindcallouttap"
               bindmarkertap="bindmarkertap"  bindcontroltap="bindcontroltap"
             ></map>
           </view>
